Unique wallets count formula

--- a/flux-IPs-management/src/app/dashboard/dashboard.component.html
+++ b/flux-IPs-management/src/app/dashboard/dashboard.component.html
@@ -80,6 +80,11 @@
       this.getCustomersCount()
     }}</span
     ><br />
+    Total Unique Payment Addresses/Wallets:-
+    <span *ngIf="this.OverviewData != undefined">{{
+      this.getPaymentAddressCount()
+    }}</span
+    ><br />
 
     <p><b>Attention Area: X Nodes</b></p>
     Closed Maintenance Window:-<span *ngIf="this.FluxProjection != undefined">{{
